Using flex table in footer in instead of nowraps to prevent dividing links in two or more words in two line

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -2,6 +2,9 @@
   margin: 0 auto;
   text-align: center;
   margin-bottom: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .container a {
@@ -9,7 +12,6 @@
   font-size: 14px;
   margin-right: 16px;
   font-family: Roboto, sans-serif;
-  white-space: nowrap;
 }
 
 .container a:visited {
